Source/WebKit2/UIProcess/API/gtk/WebKitFindController.cpp
@@ -73,6 +73,7 @@ typedef enum {
 
 struct _WebKitFindControllerPrivate {
     CString searchText;
+    // Interpreted as WebKit::FindOptions.
     uint32_t findOptions;
     unsigned maxMatchCount;
     WebKitWebView* webView;
@@ -82,21 +83,22 @@ static guint signals[LAST_SIGNAL] = { 0, };
 
 WEBKIT_DEFINE_TYPE(WebKitFindController, webkit_find_controller, G_TYPE_OBJECT)
 
-static inline WebKit::FindOptions toWebKitFindOptions(WebKitFindOptions type)
+static inline WebKit::FindOptions toWebFindOptions(uint32_t findOptions)
 {
-    return static_cast<WebKit::FindOptions>((type & WEBKIT_FIND_OPTIONS_CASE_INSENSITIVE ? FindOptionsCaseInsensitive : 0)
-        | (type & WEBKIT_FIND_OPTIONS_AT_WORD_STARTS ? FindOptionsAtWordStarts : 0)
-        | (type & WEBKIT_FIND_OPTIONS_TREAT_MEDIAL_CAPITAL_AS_WORD_START ? FindOptionsTreatMedialCapitalAsWordStart : 0)
-        | (type & WEBKIT_FIND_OPTIONS_BACKWARDS ? FindOptionsBackwards : 0)
-        | (type & WEBKIT_FIND_OPTIONS_WRAP_AROUND ? FindOptionsWrapAround : 0)
-        | (type & WEBKIT_FIND_OPTIONS_SHOW_OVERLAY ? FindOptionsShowOverlay : 0)
-        | (type & WEBKIT_FIND_OPTIONS_SHOW_FIND_INDICATOR ? FindOptionsShowFindIndicator : 0)
-        | (type & WEBKIT_FIND_OPTIONS_SHOW_HIGHLIGHT ? FindOptionsShowHighlight : 0));
+    return static_cast<WebKit::FindOptions>((findOptions & WEBKIT_FIND_OPTIONS_CASE_INSENSITIVE ? FindOptionsCaseInsensitive : 0)
+        | (findOptions & WEBKIT_FIND_OPTIONS_AT_WORD_STARTS ? FindOptionsAtWordStarts : 0)
+        | (findOptions & WEBKIT_FIND_OPTIONS_TREAT_MEDIAL_CAPITAL_AS_WORD_START ? FindOptionsTreatMedialCapitalAsWordStart : 0)
+        | (findOptions & WEBKIT_FIND_OPTIONS_BACKWARDS ? FindOptionsBackwards : 0)
+        | (findOptions & WEBKIT_FIND_OPTIONS_WRAP_AROUND ? FindOptionsWrapAround : 0));
 }
 
-static inline WebKit::FindOptions toWebKitFindOptions(uint32_t type)
+static inline WebKitFindOptions toWebKitFindOptions(uint32_t findOptions)
 {
-    return toWebKitFindOptions(static_cast<WebKitFindOptions>(type));
+    return static_cast<WebKitFindOptions>((findOptions & FindOptionsCaseInsensitive ? WEBKIT_FIND_OPTIONS_CASE_INSENSITIVE : 0)
+        | (findOptions & FindOptionsAtWordStarts ? WEBKIT_FIND_OPTIONS_AT_WORD_STARTS : 0)
+        | (findOptions & FindOptionsTreatMedialCapitalAsWordStart ? WEBKIT_FIND_OPTIONS_TREAT_MEDIAL_CAPITAL_AS_WORD_START : 0)
+        | (findOptions & FindOptionsBackwards ? WEBKIT_FIND_OPTIONS_BACKWARDS : 0)
+        | (findOptions & FindOptionsWrapAround ? WEBKIT_FIND_OPTIONS_WRAP_AROUND : 0));
 }
 
 static void didFindString(WKPageRef page, WKStringRef string, unsigned matchCount, const void* clientInfo)
@@ -317,7 +319,7 @@ guint32 webkit_find_controller_get_options(WebKitFindController* findController)
 {
     g_return_val_if_fail(WEBKIT_IS_FIND_CONTROLLER(findController), WEBKIT_FIND_OPTIONS_NONE);
 
-    return findController->priv->findOptions;
+    return toWebKitFindOptions(findController->priv->findOptions);
 }
 
 /**
@@ -360,7 +362,7 @@ static void webKitFindControllerPerform(WebKitFindController* findController, We
     WebKitFindControllerPrivate* priv = findController->priv;
     if (operation == CountOperation) {
         getPage(findController)->countStringMatches(String::fromUTF8(priv->searchText.data()),
-            toWebKitFindOptions(priv->findOptions), priv->maxMatchCount);
+            static_cast<WebKit::FindOptions>(priv->findOptions), priv->maxMatchCount);
         return;
     }
 
@@ -373,9 +375,9 @@ static void webKitFindControllerPerform(WebKitFindController* findController, We
         // unconditionally show highlights. Both search_next() and
         // search_prev() should not enable highlighting to avoid an
         // extra unmarkAllTextMatches() + markAllTextMatches()
-        findOptions |= WEBKIT_FIND_OPTIONS_SHOW_HIGHLIGHT;
+        findOptions |= FindOptionsShowHighlight;
 
-    getPage(findController)->findString(String::fromUTF8(priv->searchText.data()), toWebKitFindOptions(findOptions),
+    getPage(findController)->findString(String::fromUTF8(priv->searchText.data()), static_cast<WebKit::FindOptions>(findOptions),
                                         priv->maxMatchCount);
 }
 
@@ -417,8 +419,7 @@ void webkit_find_controller_search(WebKitFindController* findController, const g
 {
     g_return_if_fail(WEBKIT_IS_FIND_CONTROLLER(findController));
     g_return_if_fail(searchText);
-
-    webKitFindControllerSetSearchData(findController, searchText, findOptions, maxMatchCount);
+    webKitFindControllerSetSearchData(findController, searchText, toWebFindOptions(findOptions), maxMatchCount);
     webKitFindControllerPerform(findController, FindOperation);
 }
 
@@ -435,8 +436,8 @@ void webkit_find_controller_search_next(WebKitFindController* findController)
 {
     g_return_if_fail(WEBKIT_IS_FIND_CONTROLLER(findController));
 
-    findController->priv->findOptions &= ~WEBKIT_FIND_OPTIONS_BACKWARDS;
-    findController->priv->findOptions &= ~WEBKIT_FIND_OPTIONS_SHOW_HIGHLIGHT;
+    findController->priv->findOptions &= ~FindOptionsBackwards;
+    findController->priv->findOptions &= ~FindOptionsShowHighlight;
     webKitFindControllerPerform(findController, FindNextPrevOperation);
 }
 
@@ -453,8 +454,8 @@ void webkit_find_controller_search_previous(WebKitFindController* findController
 {
     g_return_if_fail(WEBKIT_IS_FIND_CONTROLLER(findController));
 
-    findController->priv->findOptions |= WEBKIT_FIND_OPTIONS_BACKWARDS;
-    findController->priv->findOptions &= ~WEBKIT_FIND_OPTIONS_SHOW_HIGHLIGHT;
+    findController->priv->findOptions |= FindOptionsBackwards;
+    findController->priv->findOptions &= ~FindOptionsShowHighlight;
     webKitFindControllerPerform(findController, FindNextPrevOperation);
 }
 
@@ -475,7 +476,7 @@ void webkit_find_controller_count_matches(WebKitFindController* findController, 
     g_return_if_fail(WEBKIT_IS_FIND_CONTROLLER(findController));
     g_return_if_fail(searchText);
 
-    webKitFindControllerSetSearchData(findController, searchText, findOptions, maxMatchCount);
+    webKitFindControllerSetSearchData(findController, searchText, toWebFindOptions(findOptions), maxMatchCount);
     webKitFindControllerPerform(findController, CountOperation);
 }
 
